--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,65 @@ html {
     margin-left: 8px; 
     line-height: 30px;
 }
+
+
+/* style blog */
+ 
+#blog .blog__show>div {
+    width: 457px; height: 521px; background-color: #fff; box-shadow: 0px 0px 3.51667px 1.75833px rgba(0, 0, 0, 0.25);
+}
+
+#blog .blog__show>div>a {
+    text-decoration: none;
+}
+
+#blog .blog__show>div>a .content{
+    padding-top: 20px;
+}
+
+#blog .blog__show>div>a .content .image__blog {
+    width: 417px; height: 264px; background-color: #2c3e50; display: flex; align-items: center; justify-content: center; overflow: hidden; margin: auto;
+}
+
+#blog .blog__show>div>a .content .image__blog img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+#blog .blog__show>div>a .content .main__content {
+    display: flex; margin-top: 26px; width: 457px;
+}
+
+#blog .blog__show>div>a .content .main__content .blog-content-container {
+    width: 417px; margin: auto;
+}
+
+.blog-content-container>h3 {
+    text-align: justify; font-size: 17.5px; font-weight: 700; color: #2c2c2c;
+}
+
+.blog-content-container .blog__level2 {
+    display: flex; align-items: center; padding: 26px 0 30px 0;
+}
+
+.blog-content-container .blog__level2 .date,
+.blog-content-container .blog__level2 .views {
+    display: flex; align-items: center;
+}
+
+.blog-content-container .blog__level2 .date i,
+.blog-content-container .blog__level2 .views i {
+    color: #3f3c3c; font-size: 16px; padding: 0 10px 0 10px;
+}
+
+.blog-content-container .blog__level2 .date h2,
+.blog-content-container .blog__level2 .views h2 {
+    font-size: 16px; color: #3f3c3c;
+}
+
+.blog-content-container .blog__level2 .break__content {
+    width: 1px; height: 14px; background-color: #3f3c3c; margin: 0 20px 0 20px;
+}
+
+.blog-content-container p {
+    text-align: justify; font-size: 14px; font-weight: 500; letter-spacing: 0.05em; color: #2c2c2c;
+}
