--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,32 @@ html {
     width: 15px; height: 15px;
 }
 
+/* style slider */
+.slide__left {
+    position: relative;
+    width: 710px;
+    height: 563px;
+    background-color: #9c9c43;
+    border-radius: 14px;
+    filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25));
+    /* overflow: hidden; */
+}
+
+.slide__left .sliders>div {
+    width: 710px;
+    height: 563px;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    overflow: hidden;
+}
+
+.slide__left .sliders>div img {
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+}
+
 /* style body 2 */
 #body2 div .body__product {
     /* position: absolute;  */
