--- a/css/checkout.css
+++ b/css/checkout.css
@@ -83,6 +83,76 @@ html {
 }
 
 /* checkout header navigation */
-#body .checkout__navi .home>div {
-    width: 108px; height: 108px; background-color: #ffc107; border-radius: 50%;
+#body .checkout__navi .feature div {
+    width: 108px; height: 108px; background-color: #ffc107; border-radius: 50%; display: flex; align-items: center; justify-content: center;
+}
+
+#body .checkout__navi .feature div i {
+    font-size: 58px; color: #2c3e50;
+}
+
+#body .checkout__navi .feature p {
+    text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
+}
+
+#body .checkout__navi .line {
+    width: 273px; height: 3px; background-color: #ffc107; margin-top: 54px;
+}
+
+/* style billing detail */
+.wrapper1 .level {
+    display: flex; justify-content: space-between; padding-bottom: 24px;
+}
+
+.wrapper1 .level p {
+    font-size: 16px; font-weight: 400; color: white; padding: 4px 8px 4px 8px;
+}
+
+.wrapper1 .level input,
+.wrapper1 .level select {
+    width: 343px; height: 49px; border: 1.5px solid white; border-radius: 5px; padding-left: 14px; padding-right: 14px;background-color: #2c3e50; color: white; font-size: 20px;
+}
+
+textarea {
+    width: 736px; height: 228px; resize: none; font-size: 20px; border-radius: 5px; font-family: 'Roboto', sans-serif; padding: 14px; border: 1.5px solid white; background-color: #2c3e50; color: white;
+}
+
+.form__level1 .wrapper>p {
+    color: white; font-size: 56px; font-weight: 400; line-height: 68px; padding: 30px 0 30px 0;
+}
+
+.place__order .header__order>div {
+    display: flex; 
+    align-items: center;
+    height: 52px;
+    font-size: 18px;
+    font-weight: 400;
+    color: white;
+}
+
+.place__order .product {
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.place__order .product>div {
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+}
+
+.place__order .product__name {
+    width: 206px;
+}
+
+.place__order .product__qty {
+    width: 72px; justify-content: center;
+}
+
+.place__order .product__subtotal {
+    width: 92px; justify-content: center;
 }
