--- a/css/cart.css
+++ b/css/cart.css
@@ -82,7 +82,106 @@ html {
     border: 2px solid white;
 }
 
-/* checkout header navigation */
+/* cart header navigation */
 #body .checkout__navi .home>div {
     width: 108px; height: 108px; background-color: #ffc107; border-radius: 50%;
+}
+
+#header .checkout__navi .line {
+    width: 273px; height: 3px; background-color: #ffc107; margin-top: 54px;
+}
+
+#header .checkout__navi>div p {
+    text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
+}
+
+/* style main products */
+
+#body .items-list .checkbox {
+    width: 76px; display: flex; align-items: center; justify-content: center;
+}
+#body .items-list .checkbox .input {
+    
+    border: 1.7px solid #2c3e50;
+    background-color: #ffc107;
+}
+
+#body .items-list .products {
+    width: 340px; display: flex; align-items: center;
+}
+
+#body .items-list .classification {
+    width: 156px; display: flex; align-items: center; justify-content: center;
+}
+
+#body .items-list .price {
+    width: 139px; display: flex; align-items: center; justify-content: center;
+}
+
+#body .items-list .quantity {
+    width: 138px; display: flex; align-items: center; justify-content: center;
+}
+
+#body .items-list .money {
+    width: 149px; display: flex; align-items: center; justify-content: center;
+}
+
+#body .items-list .delete {
+    width: 79px; display: flex; align-items: center; justify-content: center;
+}
+
+#body .items-list .products-item .image-product {
+    width: 120px; height: 120px; background-color: white; display: flex; justify-content: center; align-items: center; overflow: hidden;
+}
+
+#body .items-list .products-item .image-product img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+#body .items-list .cls-item{
+    font-size: 17.5px; font-weight: 500; color: #2c2c2c;
+}
+
+#body .items-list .price-item{
+    font-size: 17.5px; font-weight: 500; color: #2c2c2c;
+}
+
+#body .items-list .qty-item button{
+    display: flex; align-items: center; justify-content: center;background-color: #fff; width: 32px; height: 32px; border: 1px solid #838383;  cursor: pointer;
+}
+
+#body .items-list .qty-item input {
+    width: 42px; height: 32px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
+}
+
+#body .items-list .money-item{
+    font-size: 18px; font-weight: 700; color: #2c2c2c;
+}
+
+#body .items-list .delete-item i{
+    padding: 20px; font-size: 16px; color: #2c2c2c;
+}
+#body .items-list .product-detail {
+    background-color: #e4ebec; height: 160px; display: flex; margin-bottom: 10px;
+}
+
+.go-to-checkout .cart-total-wrapper>div {
+    height: 80px; display: flex; align-items: center; justify-content: center; background-color: #fff; margin-bottom: 14px;
+}
+
+.go-to-checkout .cart-total-wrapper>div>div {
+    display: flex; width: 284px;justify-content: space-between;
+}
+
+.go-to-checkout .cart-total-wrapper>div>div>p {
+    font-size: 16px; font-weight: 400;
+}
+
+.go-to-checkout .cart-total-wrapper button {
+    height: 58px; text-align: center; line-height: 58px; cursor: pointer; text-transform: uppercase; border-radius: 7px; width: 332px; font-size: 16px; font-weight: 600; border: none; color: white; background-color: #2c3e50; margin-top: 8px;
+}
+
+.go-to-checkout .cart-total-wrapper button:hover {
+    color: #ffc107;
+    background-color: #1b2632;
 }
