update for checkout-page

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -156,3 +156,7 @@ textarea {
 .place__order .product__subtotal {
     width: 92px; justify-content: center;
 }
+
+.place-order-btn button {
+    background-color: #ffc107; width: 176px; height: 40px; border-radius: 7px; font-size: 16px; font-weight: 600; color: #2c2c2c; text-transform: uppercase; margin: 10px 8px 20px 8px; cursor: pointer; border: none;
+}
