--- a/css/cart.css
+++ b/css/cart.css
@@ -92,7 +92,7 @@ html {
 }
 
 #header .checkout__navi>div p {
-    text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
+    text-align: center; padding: 20px 0 20px 0; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
 }
 
 /* style main products */
