--- a/css/checkout.css
+++ b/css/checkout.css
@@ -92,7 +92,7 @@ html {
 }
 
 #body .checkout__navi .feature p {
-    text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
+    text-align: center; padding: 20px 0 20px 0; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;
 }
 
 #body .checkout__navi .line {
