--- a/css/notification.css
+++ b/css/notification.css
@@ -206,4 +206,234 @@ html {
     margin-left: 42px;
 }
 
+.Order_ID
+{ 
+    background-color: #2c3e50;
+    color:white;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 24px;
+    border: none;
+    border-radius: 8px; 
+    width: 439px;
+    height: 65px;
+    margin-top: 20px;
+}
 
+.ID
+{
+    color:#ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+
+.ID:hover
+{
+    text-decoration: underline;
+}
+
+.Order_ID
+{
+    display: inline-block;
+}
+
+.Cus_Order
+{
+    display: inline-block;
+    width: 600px;
+    height: 800px;
+    margin-left: 120px;
+}
+
+.Cus_info
+{
+    background-color: #F2F2F2;
+    width: 560px;
+    height: 259px;
+    margin-left: 120px;
+    margin-bottom: 40px;
+    align-items: center;
+}
+.head_box_1
+{
+    background-color: #2c3e50;
+    width: 560px;
+    height: 52px;
+    color:#ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: 15px;
+    
+}
+
+.Order_info
+{
+    display: inline-block;
+    background-color: #F2F2F2;
+    width: 560px;
+    height: 205px;
+    margin-top: 20px;
+    margin-left: 120px;
+}
+
+.head_box_2
+{
+    background-color: #2c3e50;
+    width: 560px;
+    height: 52px;
+    color:#ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: 15px;
+}
+
+.Order_Button
+{
+    display: inline-block;
+    margin-left: 300px;
+    vertical-align: top;
+}
+
+.Order_Detail
+{
+    display: inline-block;
+    background-color: #F2F2F2;
+    width: 980px;
+    height: 440px;
+    vertical-align: top;
+    
+}
+
+.head_box_3
+{
+    background-color: #2c3e50;
+    width: 980px;
+    height: 52px;
+    color:#ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: 15px;
+}
+
+.return
+{
+    display: inline-block;
+    width: 245px;
+    height: 60px;
+    background-color: #2c3e50;
+    color: #ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 8px;
+}
+
+.export
+{
+    display: inline-block;
+    width: 245px;
+    height: 60px;
+    background-color: #2c3e50;
+    color: #ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 50px;
+    border-radius: 8px;
+}
+
+.continue
+{
+    display: inline-block;
+    width: 245px;
+    height: 60px;
+    background-color: #2c3e50;
+    color: #ffc107;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 50px;
+    border-radius: 8px;
+}
+
+.button_ending
+{
+    margin-top: 20px;
+}
+
+/* style footer */
+#footer div h1 {
+    font-size: 21px;
+    line-height: 25px;
+    font-weight: 600;
+    color:#ffc107;
+    text-transform: uppercase;
+}
+
+#footer div ul li {
+    list-style-type: none;
+    margin-top: 8px;
+    margin-bottom: 7px;
+    display: flex;
+    align-items: center;
+}
+
+#footer div ul li .list__type {
+    width: 5.5px;
+    height: 5.5px;
+    background-color: #fff;
+    transform: rotate(45deg);
+    margin-right: 9px;
+}
+
+#footer div ul li a {
+    font-size: 16px;
+    font-weight: 400;
+    color: white;
+    text-decoration: none;
+}
+
+#footer .infor__breakline {
+    width: 70px;
+    height: 2px;
+    background-color: #ffc107;
+    margin-top: 5px;
+    margin-bottom: 3px;
+}
+
+#footer .contact__phone, 
+#footer .contact__email {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    display: flex;
+    align-items: center;
+    color: white;
+    margin-top: 24px;
+}
+
+#footer .contact__phone i, 
+#footer .contact__email i {
+    font-size: 24px;
+    margin-right: 12px;
+}
+
+#footer .column5 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 26px;
+    height: 26px;
+    border-radius: 13px;
+    border: 2px solid white;
+}
