--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -273,3 +273,92 @@ html {
     border-radius: 13px;
     border: 2px solid white;
 }
+.checked {
+  color: #FFC107;
+  margin-right: 10px;
+}
+
+.product_info {
+    display: flex;
+    margin: auto;
+    padding-top: 94px; 
+    justify-content: space-between;
+    width: 1550px;
+    height: 680px;
+}
+
+.product_feature p {
+    padding-top: 10px;
+}
+
+#spec{
+    padding-top: 70px;  
+    width: 528px; 
+    height: 106px;
+}
+
+#spec .A {
+    float: left;
+    border: 0.5px solid black;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+
+#spec .B {
+    float: left;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+
+#spec .C {
+    float: left;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+#spec .D {
+    float: left;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+#spec .E {
+    float: left;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+#spec .G {
+    float: left;
+    width: 176px;
+    height: 53px;
+    text-align: center;
+}
+
+.qty_ordered {
+    width: auto;
+    height: 53px;
+    transform: translateY(70px);
+
+}
+.qty-button {
+    width: 141px;
+    height: 53px;
+}
+
+.qty-button button{
+    display: flex; align-items: center; justify-content: center;background-color: #fff; width: 32px; height: 32px; border: 1px solid #838383;  cursor: pointer;
+    float: left;
+}
+
+.qty-button input {
+    width: 42px; height: 32px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
+    float: left;
+}
+
+.buy-button {
+    width: 178px; height:53px; background-color:#2C3E50; color: white; cursor: pointer;
+    text-align: center; font-size: 18px; float: left;
+}
