--- a/css/style_buildpc.css
+++ b/css/style_buildpc.css
@@ -192,7 +192,7 @@ html {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    color: #2c2c2c;
+    color: #191919;
 }
 
 .Header_page a {
@@ -200,7 +200,7 @@ html {
 }
 
 .Header_page a:visited {
-    color: #2c2c2c;
+    color: #191919;
 }
 
 .item {
@@ -212,7 +212,7 @@ html {
     padding: 72px 80px 72px 80px;
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 5fr 1fr;
+    grid-template-columns: 1fr 7fr;
 }
 
 .Header {
@@ -234,8 +234,7 @@ html {
     padding-left: 16%;
 }
 
-.component,
-.remove {
+.component {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -243,6 +242,8 @@ html {
     gap: 10px;
     font-size: 20px;
     color: #059FFF;
+    border: solid #2C3E50;
+    border-width: 0px 0px 1px 1px;
 }
 
 .component img {
@@ -257,13 +258,14 @@ html {
 
 .select {
     display: flex;
-    align-items: center;
-    border-style: solid #2C3E50;
+    flex-direction: column;
+    justify-content: center;
+    border: solid #2C3E50;
     border-width: 0px 1px 1px 1px;
 }
 
-.select-button {
-    background-color: white;
+.select-btn {
+    background-color: #7ade90;
     width: 220px;
     height: 50px;
     border-radius: 10px;
@@ -272,18 +274,259 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px
-}
-
-.select-button:hover {
-    background-color: #2C3E50;
-    color: white;
+    gap: 20px;
     cursor: pointer;
 }
 
-.select-button:active {
+.select-btn:hover {
     background-color: white;
-    color: black;
+}
+
+.select-btn:active {
+    background-color: #2C3E50;
+}
+
+
+/* ? */
+
+.bg-modal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 9999;
+}
+
+.modal-content {
+    margin: 0px 32px 0px 32px;
+    width: 1320px;
+    min-height: 760px;
+    max-height: 760px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.header-modal {
+    position: relative;
+    background-color: white;
+    width: 1320px;
+    height: 32px;
+}
+
+.close {
+    position: absolute;
+    top: -10px;
+    right: 14px;
+    font-size: 42px;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
+.pagination {
+    background-color: white;
+    width: 1320px;
+    height: 32px;
+}
+
+.select-item {
+    width: 1320px;
+    min-height: 160px;
+    background-color: #d9dd9d;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-img {
+    width: 120px;
+    height: 120px;
+    background-color: grey;
+    margin-right: 40px;
+}
+
+.item-text-box {
+    width: 600px;
+    min-height: 124px;
+    font-size: 24px;
+    margin-right: 40px;
+    color: #c55f3e;
+    line-height: 28px;
+}
+
+.item-price {
+    width: 160px;
+    height: 44px;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    display: block;
+    margin-right: 60px;
+}
+
+.select-button {
+    width: 160px;
+    height: 44px;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    background-color: #20E934;
+    color: white;
+    border: 0px;
+    border-radius: 16px;
+    cursor: pointer;
+}
+
+.select-button:hover {
+    background-color: #059FFF;
+}
+
+.select-button:active {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+
+/* ? */
+
+.selected-item {
+    width: 1540px;
+    min-height: 160px;
+    background-color: #D9D9D9;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid black;
+    border-width: 0px 0px 1px 0px;
+}
+
+.quantity {
+    background-color: white;
+    border: 0px;
+    border-radius: 10px;
+    width: 56px;
+    height: 56px;
+    font-size: 36px;
+    font-weight: bold;
+    margin-right: 24px;
+}
+
+.X {
+    width: 24px;
+    height: 24px;
+    margin-right: 24PX;
+}
+
+.equals {
+    width: 24px;
+    height: 24px;
+    margin-right: 24px
+}
+
+.selected-item .item-price {
+    margin-right: 24px;
+}
+
+.item-total-cost {
+    width: 160px;
+    height: 44px;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    margin-right: 32px
+}
+
+.remove-btn {
+    width: 116px;
+    height: 60px;
+    border: 0px;
+    border-radius: 16px;
+    background-color: red;
+    color: white;
+    box-shadow: 0px 2px 10px black;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+/* ? */
+
+.price-reset-add {
+    width: 100%;
+    height: 140px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+}
+
+.add-to-cart {
+    margin-right: 80px;
+    width: 700px;
+    height: 140px;
+    background-color: #E4E8EC;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#total_price {
+    top: 0px;
+    width: 700px;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 320px;
+    font-size: 36px;
+}
+
+.reset-add {
+    width: 700px;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#reset {
+    border-radius: 12px;
+    background-color: #2C3E50;
+    color: white;
+    width: 240px;
+    height: 64px;
+    font-size: 36px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#add-to-cart {
+    border-radius: 12px;
+    width: 360px;
+    height: 64px;
+    font-size: 36px;
+    font-weight: bold;
+    background-color: #FFC107;
+    cursor: pointer;
+}
+
+#add-to-cart:hover {
+    background-color: white;
+}
+
+#reset:hover {
+    background-color: grey;
 }
 
 
