--- a/css/style.css
+++ b/css/style.css
@@ -413,11 +413,9 @@ html {
 
 #body2 div .body__product .product__tags {
     margin: 16px 0px 16px 26px;
-    width: 74px;
+    /* width: 74px; */
     height: 35px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
     font-size: 14px;
     font-weight: 600;
     color: #2c2c2c;
@@ -426,6 +424,8 @@ html {
     background-color: #f7f7f7;
     border-radius: 7px;
     box-shadow: 0px 0px 1.75833px rgba(0, 0, 0, 0.25);
+    line-height: 35px;
+    padding: 0 8px 0 8px;
 }
 
 #body2 div .body__product .product__breakline {
