--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -13,25 +13,14 @@ html {
     outline: none;
 }
 
-.nav {
-    display: flex;
-    list-style-type: none;
-    position: absolute;
-    bottom: 0;
-    margin: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .nav li {
     display: flex;
     height: 54px;
     text-transform: uppercase;
     align-items: center;
+    /* padding: 0 20px; */
     justify-content: space-between;
-    padding: 0 20px;
     white-space: nowrap;
-    cursor: pointer;
 }
 
 .nav li a {
@@ -39,6 +28,9 @@ html {
     text-decoration: none;
     font-size: 14px;
     font-weight: 600;
+    padding: 19px 20px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .nav li a:hover {
@@ -57,9 +49,13 @@ html {
     text-decoration: none;
     font-size: 16px;
     font-weight: 700;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
+
 /* header-search */
+
 .header-search form select {
     width: 232px;
     height: 54px;
@@ -74,7 +70,7 @@ html {
 
 .header-search form div input {
     flex: 1;
-    width: 482px;
+    width: 472px;
     height: 54px;
     border: none;
     margin-right: 0px;
@@ -101,7 +97,9 @@ html {
     cursor: pointer;
 }
 
+
 /* header-support */
+
 .header-support,
 .header-cart {
     display: inline-block;
@@ -142,24 +140,19 @@ html {
     display: inline-block;
 }
 
+
 /* header-cart */
+
 .header-cart {
-    position: relative; 
+    position: relative;
     height: 36px;
 }
 
-.header-cart a{
+.header-cart a {
     text-decoration: none;
     color: white;
     display: flex;
     align-items: center;
-}
-
-.header-cart a div i {
-    font-size: 30px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .header-cart a div .notifi-nums {
@@ -178,40 +171,25 @@ html {
     font-weight: 600;
 }
 
-.header-cart a .cart-notification {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 42px;
-    height: 36px;
-}
-
-.header-cart a h2 {
-    margin-left: 15px;
-    font-size: 21px;
-    font-weight: 800;
-    letter-spacing: -0.03em;
-}
-
 .header-function {
-    display:flex; 
-    position: absolute;
-    top: 40px;
+    display: flex;
+    /* position: absolute; */
+    width: 1244px;
+    /* top: 40px; */
     right: 124px;
-    padding: 10px;
+    padding: 5px 10px 40px 10px;
     align-items: center;
+    justify-content: space-between;
 }
 
-.header-support, .header-cart {
-    margin-left: 42px;
-}
 
 /* style footer */
+
 #footer div h1 {
     font-size: 21px;
     line-height: 25px;
     font-weight: 600;
-    color:#ffc107;
+    color: #ffc107;
     text-transform: uppercase;
 }
 
@@ -246,7 +224,7 @@ html {
     margin-bottom: 3px;
 }
 
-#footer .contact__phone, 
+#footer .contact__phone,
 #footer .contact__email {
     font-size: 18px;
     font-weight: 500;
@@ -258,7 +236,7 @@ html {
     margin-top: 24px;
 }
 
-#footer .contact__phone i, 
+#footer .contact__phone i,
 #footer .contact__email i {
     font-size: 24px;
     margin-right: 12px;
@@ -272,4 +250,69 @@ html {
     height: 26px;
     border-radius: 13px;
     border: 2px solid white;
+}
+
+/* body */
+.navi_product p {
+    text-align: center; text-transform: uppercase;
+}
+
+.product_body .sub_images div{
+    width: 165px; height: 120px; background-color: #fff; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px solid #2c3e50; margin-bottom: 20px;
+}
+
+.product_body .sub_images img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+.product_body .main_img div{
+    width: 700px; height: 540px; background-color: #2c3e50; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px solid #2c3e50;
+}
+
+.product_body .main_img img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+.product_options .brief_description span{
+    font-size: 16px;
+}
+
+.star_vote i {
+    color: #ffc107; font-size: 16px;
+}
+
+.product__short p {
+    color: #2c3e50; font-size: 16px; font-weight: 300; line-height: 28px;
+}
+
+.configurations a {
+    text-decoration: none;
+}
+
+.configurations .config {
+    min-width: 176px; height: 52px; display: flex; align-items: center; justify-content: center; padding: 20px; color: #2c3e50;
+}
+
+.options__edit .edit__qty button {
+    display: flex; align-items: center; justify-content: center;background-color: #fff; width: 44px; height: 44px; border: 1px solid #838383;  cursor: pointer; padding: 0 8px 0 8px;
+}
+
+.options__edit .edit__qty input {
+    width: 52px; height: 44px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
+}
+
+.options__edit a {
+    text-decoration: none;
+}
+
+.options__edit .buy_now, .options__edit .add_to_cart {
+    width: 170px; height: 52px; display: flex; align-items: center; justify-content: center; font-size: 18px; font-weight: 500;
+}
+
+.product__descriptionn a {
+    text-decoration: none;
+}
+
+.product__descriptionn .descpt {
+    width: 140px; height: 52px; color: #2c2c2c; display: flex; justify-content: center; align-items: center; font-size: 21px; font-weight: 600;
 }
