--- a/css/product_list.css
+++ b/css/product_list.css
@@ -37,7 +37,7 @@ html {
     text-decoration: none;
 }
 
-.nav .all-categories {
+/* .nav .all-categories {
     width: 288px;
     height: 54px;
     background: #ffc107;
@@ -51,7 +51,7 @@ html {
     font-weight: 700;
     margin-right: 20px;
     margin-left: 20px;
-}
+} */
 
 
 /* header-search */
@@ -252,81 +252,44 @@ html {
     border: 2px solid white;
 }
 
-/* body */
-.navi_product p {
-    text-align: center; text-transform: uppercase;
-}
 
-.product_body .sub_images div{
-    width: 165px; height: 120px; background-color: #fff; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px solid #2c3e50; margin-bottom: 20px;
-}
+/* style for body */
 
-.product_body .sub_images img {
-    min-width: 100%; min-height: 100%; object-fit: cover;
-}
-
-.product_body .main_img div{
-    width: 700px; height: 540px; background-color: #fff; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px solid #2c3e50;
-}
-
-.product_body .main_img img {
-    min-width: 100%; min-height: 100%; object-fit: cover;
-}
-
-.product_options .brief_description span{
-    font-size: 16px;
-}
-
-.star_vote i {
-    color: #ffc107; font-size: 16px;
-}
-
-.product__short p {
-    color: #2c3e50; font-size: 16px; font-weight: 300; line-height: 28px;
-}
-
-.configurations a {
+.body__product {
+    background-color: #fff;
+    border-radius: 7px;
+    filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25));
     text-decoration: none;
 }
 
-.configurations .config {
-    min-width: 176px; height: 52px; display: flex; align-items: center; justify-content: center; padding: 20px; color: #2c3e50;
+.product {
+    width: 200px; background-color: #fff; display: flex; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25));
 }
 
-.configurations .first_config {
-    border: 2px solid #2c3e50; font-weight: 600;
+.product-wrapper {
+    width: 180px; margin: auto; margin-top: 12px; margin-bottom: 12px;
 }
 
-/* .configurations .selected-config:not(.first_config) {
-    border: none;
-    font-weight: normal;
-} */
-
-.configurations .selected-config {
-    border: 2px solid #2c3e50;
-    font-weight: 600;
+.product-img {
+    background-color: #fff; width: 180px; height: 160px; border-radius: 6px; display: flex; align-items: center; justify-content: center; overflow: hidden;
 }
 
-.options__edit .edit__qty button {
-    display: flex; align-items: center; justify-content: center;background-color: #fff; width: 44px; height: 44px; border: 1px solid #838383;  cursor: pointer; padding: 0 8px 0 8px;
+.product-img img {
+    min-width: 100%; min-height: 100%; object-fit: hidden;
 }
 
-.options__edit .edit__qty input {
-    width: 52px; height: 44px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
+.product-tag {
+    margin: 8px 0 8px 4px; height: 20px; font-size: 8px; color: #2c2c2c; text-transform: uppercase; letter-spacing: 0.02em; background-color: #f7f7f7; border-radius: 4px; box-shadow: 0px 0px 1.5833px rgba(0, 0, 0, 0.25); line-height: 20px; padding: 0 8px 0 8px; display: inline-block;
 }
 
-.options__edit a {
-    text-decoration: none;
+.product_breakline {
+    background-color: #f6f6f6; height: 2px;
 }
 
-.options__edit .buy_now, .options__edit .add_to_cart {
-    width: 170px; height: 52px; display: flex; align-items: center; justify-content: center; font-size: 18px; font-weight: 500;
+.product_name {
+    font-size: 12px; font-weight: 600; text-align: justify; color: #2c2c2c; letter-spacing: -0.02em; margin: 6px 0 6px 0;
 }
 
-.product__descriptionn a {
-    text-decoration: none;
-}
-
-.product__descriptionn .descpt {
-    width: 140px; height: 52px; color: #2c2c2c; display: flex; justify-content: center; align-items: center; font-size: 21px; font-weight: 600;
+.product_price {
+    font-size: 16px; font-weight: 600; color: #2c2c2c;
 }
