--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ html {
     margin-left: 26px;
     width: 292px;
     height: 310px;
-    background-color: #2c3e50;
+    background-color: #fff;
     border-radius: 7px;
     display: flex;
     align-items: center;
