--- a/css/notification.css
+++ b/css/notification.css
@@ -13,25 +13,14 @@ html {
     outline: none;
 }
 
-.nav {
-    display: flex;
-    list-style-type: none;
-    position: absolute;
-    bottom: 0;
-    margin: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .nav li {
     display: flex;
     height: 54px;
     text-transform: uppercase;
     align-items: center;
+    /* padding: 0 20px; */
     justify-content: space-between;
-    padding: 0 20px;
     white-space: nowrap;
-    cursor: pointer;
 }
 
 .nav li a {
@@ -39,6 +28,9 @@ html {
     text-decoration: none;
     font-size: 14px;
     font-weight: 600;
+    padding: 19px 20px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .nav li a:hover {
@@ -57,9 +49,13 @@ html {
     text-decoration: none;
     font-size: 16px;
     font-weight: 700;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
+
 /* header-search */
+
 .header-search form select {
     width: 232px;
     height: 54px;
@@ -74,7 +70,7 @@ html {
 
 .header-search form div input {
     flex: 1;
-    width: 482px;
+    width: 472px;
     height: 54px;
     border: none;
     margin-right: 0px;
@@ -101,7 +97,9 @@ html {
     cursor: pointer;
 }
 
+
 /* header-support */
+
 .header-support,
 .header-cart {
     display: inline-block;
@@ -142,24 +140,19 @@ html {
     display: inline-block;
 }
 
+
 /* header-cart */
+
 .header-cart {
-    position: relative; 
+    position: relative;
     height: 36px;
 }
 
-.header-cart a{
+.header-cart a {
     text-decoration: none;
     color: white;
     display: flex;
     align-items: center;
-}
-
-.header-cart a div i {
-    font-size: 36px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .header-cart a div .notifi-nums {
@@ -178,204 +171,25 @@ html {
     font-weight: 600;
 }
 
-.header-cart a .cart-notification {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 42px;
-    height: 36px;
-}
-
-.header-cart a h2 {
-    margin-left: 15px;
-    font-size: 21px;
-    font-weight: 800;
-    letter-spacing: -0.03em;
-}
-
 .header-function {
-    display:flex; 
-    position: absolute;
-    top: 40px;
+    display: flex;
+    /* position: absolute; */
+    width: 1244px;
+    /* top: 40px; */
     right: 124px;
-    padding: 10px;
+    padding: 5px 10px 40px 10px;
     align-items: center;
+    justify-content: space-between;
 }
 
-.header-support, .header-cart {
-    margin-left: 42px;
-}
-
-.Order_ID
-{ 
-    background-color: #2c3e50;
-    color:white;
-    align-items: center;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 24px;
-    border: none;
-    border-radius: 8px; 
-    width: 439px;
-    height: 65px;
-    margin-top: 20px;
-}
-
-.ID
-{
-    color:#ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 24px;
-}
-
-
-.ID:hover
-{
-    text-decoration: underline;
-}
-
-.Order_ID
-{
-    display: inline-block;
-}
-
-.Cus_Order
-{
-    display: inline-block;
-    width: 600px;
-    height: 800px;
-    margin-left: 120px;
-}
-
-.Cus_info
-{
-    background-color: #F2F2F2;
-    width: 560px;
-    height: 259px;
-    margin-left: 120px;
-    margin-bottom: 40px;
-    align-items: center;
-}
-.head_box_1
-{
-    background-color: #2c3e50;
-    width: 560px;
-    height: 52px;
-    color:#ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 30px;
-    padding-top: 15px;
-    
-}
-
-.Order_info
-{
-    display: inline-block;
-    background-color: #F2F2F2;
-    width: 560px;
-    height: 205px;
-    margin-top: 20px;
-    margin-left: 120px;
-}
-
-.head_box_2
-{
-    background-color: #2c3e50;
-    width: 560px;
-    height: 52px;
-    color:#ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 30px;
-    padding-top: 15px;
-}
-
-.Order_Button
-{
-    display: inline-block;
-    margin-left: 300px;
-    vertical-align: top;
-}
-
-.Order_Detail
-{
-    display: inline-block;
-    background-color: #F2F2F2;
-    width: 980px;
-    height: 440px;
-    vertical-align: top;
-    
-}
-
-.head_box_3
-{
-    background-color: #2c3e50;
-    width: 980px;
-    height: 52px;
-    color:#ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 30px;
-    padding-top: 15px;
-}
-
-.return
-{
-    display: inline-block;
-    width: 245px;
-    height: 60px;
-    background-color: #2c3e50;
-    color: #ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 8px;
-}
-
-.export
-{
-    display: inline-block;
-    width: 245px;
-    height: 60px;
-    background-color: #2c3e50;
-    color: #ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 50px;
-    border-radius: 8px;
-}
-
-.continue
-{
-    display: inline-block;
-    width: 245px;
-    height: 60px;
-    background-color: #2c3e50;
-    color: #ffc107;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 50px;
-    border-radius: 8px;
-}
-
-.button_ending
-{
-    margin-top: 20px;
-}
 
 /* style footer */
+
 #footer div h1 {
     font-size: 21px;
     line-height: 25px;
     font-weight: 600;
-    color:#ffc107;
+    color: #ffc107;
     text-transform: uppercase;
 }
 
@@ -410,7 +224,7 @@ html {
     margin-bottom: 3px;
 }
 
-#footer .contact__phone, 
+#footer .contact__phone,
 #footer .contact__email {
     font-size: 18px;
     font-weight: 500;
@@ -422,7 +236,7 @@ html {
     margin-top: 24px;
 }
 
-#footer .contact__phone i, 
+#footer .contact__phone i,
 #footer .contact__email i {
     font-size: 24px;
     margin-right: 12px;
@@ -436,4 +250,53 @@ html {
     height: 26px;
     border-radius: 13px;
     border: 2px solid white;
+}
+
+.field {
+    width: 120px;
+}
+
+.split {
+    width: 20px;
+}
+
+.row_info {
+    display: flex; padding: 10px 0 10px 30px; align-items: center; font-size: 14px; font-weight: 600;
+
+}
+
+.main_info {
+    width: 292px;
+}
+
+.header_info {
+    background-color: #2c3e50; height: 44px; color: #ffc107; font-size: 16px; font-weight: 700; padding-left: 26px; align-items: center; text-transform: uppercase; display: flex;
+}
+
+.order_header {
+    align-items: center; font-size: 14px; font-weight: 400; color: #2c2c2c; text-align: center;
+}
+
+.product_info {
+    display: flex; justify-content: space-between;
+}
+
+.product_config, .product_categ, .product_qty, .product_subtotal {
+    display: flex; align-items: center; justify-content: center; font-size: 16px; font-weight: 600;
+}
+
+.product_name {
+    font-size: 16px; font-weight: 500; display: flex; align-items: center; 
+}
+
+.product_info {
+    margin-top: 16px; margin-bottom: 16px;
+}
+
+.more_info>a {
+    text-decoration: none;
+}
+
+.more_info>a>div {
+    background-color: #2c3e50; color: #ffc107; font-size: 16px; padding: 10px 20px; margin-right: 30px; border-radius: 8px;
 }
