--- a/css/notification.css
+++ b/css/notification.css
@@ -286,7 +286,7 @@ html {
 }
 
 .product_name {
-    font-size: 16px; font-weight: 500; display: flex; align-items: center; 
+    font-size: 16px; font-weight: 500; display: flex; align-items: center; padding-left: 10px;
 }
 
 .product_info {
@@ -298,5 +298,9 @@ html {
 }
 
 .more_info>a>div {
-    background-color: #2c3e50; color: #ffc107; font-size: 16px; padding: 10px 20px; margin-right: 30px; border-radius: 8px;
+    background-color: #2c3e50; color: #ffc107; font-size: 16px; padding: 10px 20px; margin-right: 30px; border-radius: 6px;
+}
+
+.more_info>a>div>i {
+    margin-right: 8px;
 }
