--- a/css/build_pc.css
+++ b/css/build_pc.css
@@ -276,23 +276,43 @@ html {
 }
 
 .select_field {
-    width: 200px; padding-top: 24px; padding-bottom: 24px;
+    width: 200px; padding-top: 30px; padding-bottom: 24px;
 }
 
 .select_item {
-    width: 600px; display: flex; align-items: center; font-size: 14px; font-weight: 500; padding: 20px 12px 20px 12px;
+    width: 600px; display: flex; align-items: center; font-size: 15px; font-weight: 500; padding: 20px 12px 20px 12px; justify-content: space-between;
+}
+
+.select_item .comp_img {
+    width: 124px; height: 124px; background-color: #fff; display: flex; overflow: hidden; justify-content: center; align-items: center; border: 3px solid #2c3e50;
+}
+
+.select_item .comp_img img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+.select_item>a {
+    color: #2c2c2c; text-decoration: none; width: 420px;
+}
+
+.select_item .select_btn {
+    height: 46px; border: 3px solid #2c3e50; display: flex; align-items: center; margin-left: 100px; border-radius: 8px; background-color: #f2f2f2;
+}
+
+.select_item .select_btn a {
+    display: inline-block; text-decoration: none; text-transform: uppercase; color: #2c3e50; font-size: 18px; font-weight: 600; padding: 4px 32px;
 }
 
 .config_name {
-    width: 300px; display: flex; align-items: center; font-size: 16px; font-weight: 500; color: #2c3e50; justify-content: center;
+    width: 300px; display: flex; align-items: center; font-size: 18px; font-weight: 500; color: #2c3e50; justify-content: center; text-align: center;
 }
 
 .quantity {
-    width: 100px; display: flex; align-items: center; color: #2c3e50; justify-content: center;
+    width: 100px; display: flex; align-items: center; color: #2c3e50; justify-content: center; font-size: 20px; font-weight: 500;
 }
 
 .sub_total {
-    width: 120px; display: flex; align-items: center; font-size: 24px; font-weight: 700; color: #2c3e50; justify-content: center;
+    width: 132px; display: flex; align-items: center; font-size: 22px; font-weight: 700; color: #2c3e50; justify-content: center;
 }
 
 .remove {
